[package]
name = "isevenorodd"
version = "0.1.0"
edition = "2021"
description = "A simple command line tool to generate a rust function to check if a number is even or odd."
authors = ["metamethods <tabledmetamethods@gmail.com>"]
license = "MIT"
repository = "https://github.com/metamethods/isevenorodd"
documentation = "https://github.com/metamethods/isevenorodd"
readme = "README.md"
keywords = ["unix", "cli", "isevenorodd"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
